update scheduler for release :)